--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,6 +1,12 @@
 on:
   push:
+    paths:
+      - 'modules/**/*.py'
+      - '.github/*'
   pull_request:
+    paths:
+      - 'modules/**/.py'
+      - '.github/*'
 
 jobs:
   build:
