--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -33,6 +33,6 @@ jobs:
         run: |
           flake8 modules/mediawiki --ignore=E501,W503,SFS301
           pytest -n auto
-          coverage run pytest modules/mediawiki
-          coverage -m -fail-under=27
+          coverage run -m pytest modules/mediawiki
+          coverage report -fail-under=27
           mypy modules/mediawiki --ignore-missing-imports
