--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -34,5 +34,5 @@ jobs:
           flake8 modules/mediawiki --ignore=E501,W503,SFS301
           pytest -n auto
           coverage run -m pytest modules/mediawiki
-          coverage report -fail-under=27
+          coverage report --fail-under=27
           mypy modules/mediawiki --ignore-missing-imports
