--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -31,7 +31,7 @@ jobs:
           pip install -r .github/pythonchecks.txt
       - name: Run tests
         run: |
-          flake8 modules/mediawiki --ignore=E501,W503,SFS301
+          flake8 modules/mediawiki --ignore=E501,W503,SFS301 --max-complexity 15
           coverage run -m pytest modules/mediawiki
           coverage report --fail-under=35
           mypy modules/mediawiki --ignore-missing-imports
