--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -32,6 +32,6 @@ jobs:
       - name: Run tests
         run: |
           flake8 modules/mediawiki --ignore=E501,W503,SFS301
-          coverage --source=modules/mediawiki run -m pytest modules/mediawiki
+          coverage run --source=modules/mediawiki -m pytest modules/mediawiki
           coverage report --fail-under=35
           mypy modules/mediawiki --ignore-missing-imports
