--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -31,9 +31,22 @@ jobs:
           pip install -r .github/pythonchecks.txt
       - name: Run tests
         run: |
-          flake8 modules/mediawiki modules/ssl modules/monitoring --enable-extensions=TC,TC1 --ignore=E501,W503,SFS301 --max-complexity 14 --exclude='*/dist,*/build'
+          flake8 modules/mediawiki modules/ssl modules/monitoring --enable-extensions=TC,TC1 --ignore=E501,W503,SFS301 --max-complexity 14 --exclude='*/dist/*,*/build/*'
           mypy modules/mediawiki modules/ssl modules/monitoring --ignore-missing-imports
           coverage run --branch -m pytest modules/mediawiki
           coverage report --fail-under=70
           vermin -v --eval-annotations --backport argparse --backport importlib --backport ipaddress --backport typing --backport dataclasses --no-parse-comments .
+      - name: Build Package Version
+        run: |
+          pip uninstall requests filelock -y
+          sudo apt-get install -y python3-requests python3-filelock
+          pip install build wheel2deb
+          pyproject-build --wheel --outdir dist .
+          cd dist
+          pip wheel MW_SRE_Utils-3.0-py3-none-any.whl
+          wheel2deb
+          wheel2deb build
+          ls -l output/*.deb
+          dpkg -i output/*.deb
+
 
