--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -31,7 +31,7 @@ jobs:
           pip install -r .github/pythonchecks.txt
       - name: Run tests
         run: |
-          flake8 modules/mediawiki modules/ssl modules/monitoring --enable-extensions=TC,TC1 --ignore=E501,W503,SFS301 --max-complexity 14 --exclude='*/dist/*,*/build/*'
+          flake8 modules/mediawiki modules/ssl modules/monitoring --enable-extensions=TC,TC1 --ignore=E501,W503,SFS301 --max-complexity 14 --exclude='*/dist/*, */build/*, */__init__.py'
           mypy modules/mediawiki modules/ssl modules/monitoring --ignore-missing-imports
           coverage run --branch -m pytest modules/mediawiki
           coverage report --fail-under=70
