--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -34,7 +34,7 @@ jobs:
           pip uninstall requests filelock -y
           sudo apt-get install -y python3-requests python3-filelock
           sudo apt-get install -y apt python3-apt apt-file dpkg-dev fakeroot build-essential devscripts debhelper
-          sudo apt file update
+          sudo apt-file update
           pip install build wheel2deb
           cd modules/mediawiki/files/bin
           pyproject-build --wheel --outdir dist .
